--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
         <item>2017</item>
         <item>2018</item>
     </string-array>
+    <string name="title_activity_detail_daerah_mhs">Map</string>
 </resources>
